--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,4 +1,4 @@
-$bg-color: #998876;
+$bg-color: #b1a191;
 
 html,
 body,
@@ -318,7 +318,7 @@ img {
         background: #e6ae39;
         border-top: 1px solid rgba(255, 255, 255, 0.2);
         border-left: 1px solid rgba(255, 255, 255, 0.2);
-        box-shadow: 0 0 1px 0 rgba(0, 0, 0, .2);
+        box-shadow: -1px 1px 1px 0 rgba(0, 0, 0, 0.2);
         text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
     }
 
