--- a/styles/index.scss
+++ b/styles/index.scss
@@ -376,6 +376,35 @@ img {
         border-radius: 50%;
       }
     }
+
+    .customize {
+      position: relative;
+      z-index: 3;
+      display: flex;
+      height: 30px;
+      padding: 5px;
+
+      .picker {
+        position: relative;
+        width: 40px;
+        cursor: pointer;
+        border-radius: 3px;
+      }
+
+      .popover {
+        position: absolute;
+        z-index: 2;
+        top: 30px;
+        left: 5px;
+        .cover {
+          position: fixed;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
+        }
+      }
+    }
   }
 
   &.mobile {
