--- a/styles/index.scss
+++ b/styles/index.scss
@@ -292,10 +292,10 @@ img {
           padding-left: 10px;
           border-left: 1px solid #544738;
 
-          a {
+          a.nav-h2 {
             position: relative;
             margin-bottom: 10px;
-            font-size: 14px;
+            font-size: 15px;
             color: #544738;
             text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
 
@@ -307,7 +307,30 @@ img {
               content: '';
               position: absolute;
               left: -12px;
-              top: 6px;
+              top: 8px;
+              width: 3px;
+              height: 3px;
+              background: #544738;
+            }
+          }
+
+          a.nav-h3 {
+            position: relative;
+            margin-bottom: 10px;
+            padding-left: 10px;
+            font-size: 13px;
+            color: rgba(84, 71, 56, 0.9);
+            text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
+
+            &:last-child {
+              margin-bottom: 0;
+            }
+
+            &::before {
+              content: '';
+              position: absolute;
+              left: 0;
+              top: 5px;
               width: 3px;
               height: 3px;
               background: #544738;
@@ -374,35 +397,6 @@ img {
         height: 15px;
         background: var(--body-bg);
         border-radius: 50%;
-      }
-    }
-
-    .customize {
-      position: relative;
-      z-index: 3;
-      display: flex;
-      height: 30px;
-      padding: 5px;
-
-      .picker {
-        position: relative;
-        width: 40px;
-        cursor: pointer;
-        border-radius: 3px;
-      }
-
-      .popover {
-        position: absolute;
-        z-index: 2;
-        top: 30px;
-        left: 5px;
-        .cover {
-          position: fixed;
-          top: 0;
-          right: 0;
-          bottom: 0;
-          left: 0;
-        }
       }
     }
   }
