--- a/docs/traitor/css/style.css
+++ b/docs/traitor/css/style.css
@@ -10,6 +10,10 @@ body,
   height: 100%;
 }
 
+html {
+  font-size: 16px;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
     sans-serif;
